<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="105dp"
                android:background="@drawable/content_area"
                android:layout_alignTop="@+id/textView11"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:layout_marginTop="23dp"
                android:text="@string/split_bill"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <Button
                android:id="@+id/sbPlusBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/plus"
                android:text="" />

            <Button
                android:id="@+id/sbMinusBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_above="@+id/tipMinusBtn"
                android:layout_alignBottom="@id/textView3"
                android:layout_toLeftOf="@+id/sbTv"
                android:layout_toStartOf="@+id/sbTv"
                android:background="@drawable/minus"
                android:text="" />

            <TextView
                android:id="@+id/sbTv"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/sbPlusBtn"
                android:layout_toLeftOf="@+id/sbPlusBtn"
                android:layout_toStartOf="@+id/sbPlusBtn"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="17dp"
                android:text="@string/tip"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <Button
                android:id="@+id/tipMinusBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignLeft="@+id/sbMinusBtn"
                android:layout_alignStart="@+id/sbMinusBtn"
                android:background="@drawable/minus"
                android:text="" />

            <Button
                android:id="@+id/tipPlusBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignLeft="@+id/sbPlusBtn"
                android:layout_alignStart="@id/sbPlusBtn"
                android:background="@drawable/plus"
                android:text="" />

            <TextView
                android:id="@+id/tipTv"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tipPlusBtn"
                android:layout_toEndOf="@+id/tipMinusBtn"
                android:layout_toRightOf="@+id/tipMinusBtn"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="17dp"
                android:text="@string/total_amount"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/totalAmountEd"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_above="@+id/textView10"
                android:layout_toEndOf="@+id/textView8"
                android:layout_toRightOf="@+id/textView8"
                android:background="@drawable/input_field"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textColor="@color/colorTextBlue"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/totalAmountEd"
                android:layout_toLeftOf="@+id/tipTv"
                android:layout_toStartOf="@+id/tipTv"
                android:text="@string/currency_sign"
                android:textColor="@color/colorTextBlue"
                android:textSize="25sp" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/totalAmountEd"
                android:layout_alignRight="@+id/totalAmountEd"
                android:layout_alignTop="@+id/textView10"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView7"
                android:layout_alignStart="@+id/textView7"
                android:layout_below="@+id/textView7"
                android:layout_marginTop="17dp"
                android:text="@string/rounding_prices"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView"
                android:layout_below="@+id/textView"
                android:text="@string/tip_per_person"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/total_tip"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@+id/textView11"
                android:layout_alignLeft="@+id/textView11"
                android:layout_alignStart="@+id/textView11" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/total_tip_per_person"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@+id/textView12"
                android:layout_alignLeft="@+id/textView12"
                android:layout_alignStart="@+id/textView12" />

            <TextView
                android:id="@+id/tppTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView11"
                android:layout_alignBottom="@+id/textView11"
                android:layout_alignEnd="@+id/checkBox"
                android:layout_alignRight="@+id/checkBox"
                android:textColor="@color/colorTextBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ttTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView12"
                android:layout_alignBottom="@+id/textView12"
                android:layout_alignEnd="@+id/tppTv"
                android:layout_alignRight="@+id/tppTv"
                android:textColor="@color/colorTextBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ttppTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView13"
                android:layout_alignBottom="@+id/textView13"
                android:layout_alignEnd="@+id/ttTv"
                android:layout_alignRight="@+id/ttTv"
                android:textColor="@color/colorTextBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_to_pay"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/ttpTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView17"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorTextBlue"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guest_check"
                android:textSize="15sp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="12dp"
                android:layout_below="@+id/checkBox"
                android:layout_alignLeft="@+id/textView10"
                android:layout_alignStart="@+id/textView10" />

        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>